--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,3 +1,7 @@
+/* body {
+  margin: 0;
+} */
+
 .index {
   position: relative;
   width: 100vw;
@@ -5,25 +9,72 @@
 
   display: flex;
   justify-content: center;
-  /* align-items: center; */
 }
 
 .back {
   width: 50vw;
   height: 50vh;
-  
-  /* background-color: red; */
 }
 
 .content {
   width: 50vw;
+  height: 400px;
   max-width: 800px;
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
   
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.contentColorPicker {
   display: flex;
   justify-content: space-between;
   z-index: 1;
+  
+  margin-bottom: 40px;
+}
+
+.contentText {
+  font-size: 32px;
+  font-weight: bold;
+  
+  width: 300px;
+}
+
+.contentTextTitle {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.contentTextNum {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.r {
+  color: red;
+}
+
+.g {
+  color: green;
+}
+
+.b {
+  color: blue;
+}
+
+.up {
+  color: red;
+}
+
+.down {
+  color: green;
 }
