--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -33,8 +33,10 @@
 
 
 .contentColorPicker {
+  width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   z-index: 1;
   
   margin-bottom: 40px;
